<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="username"
            type="String" />

        <variable
            name="password"
            type="String" />

        <variable
            name="registerButton"
            type="com.example.chatApplication.registerScreen.RegisterActivity" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/common_padding"
            tools:context=".registerScreen.RegisterActivity">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/logo_image_height"
                android:src="@drawable/app_logo" />

            <ProgressBar
                android:id="@+id/register_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                />
            <EditText
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginTop="@dimen/common_margin"
                android:layout_marginBottom="@dimen/common_margin"
                android:background="@drawable/edittext_bg"
                android:hint="@string/email"
                android:text="@{username}"
                android:textAlignment="center"
                android:textSize="@dimen/common_text_size"
                android:padding="@dimen/common_padding"
                android:inputType="textEmailAddress"
                />

            <EditText
                android:id="@+id/user_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginTop="@dimen/common_margin"
                android:layout_marginBottom="@dimen/common_margin"
                android:background="@drawable/edittext_bg"
                android:hint="@string/password"
                android:text="@{password}"
                android:textAlignment="center"
                android:textSize="@dimen/common_text_size"
                android:padding="@dimen/common_padding"
                android:inputType="textPassword"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/common_margin"
                android:background="@drawable/button_bg"
                android:elevation="@dimen/elevation_10"
                android:onClick="@{()-> registerButton.onRegisterButtonClick()}"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/common_text_size" />
        </LinearLayout>
    </ScrollView>
</layout>
